# qt-blocks

./: README.md  pyproject.toml
src/qt_blocks/: __init__.py  layouts.py
