[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nox>=2022.11.21",
    "pre-commit>=2.21.0",
    "black>=23.3.0",
]

[project]
name = "qt-blocks"
version = "0.1.0"
description = "Prefab Qt blocks and layouts"
authors = [
    {name = "sharpencrag", email = "ed.whetstone@gmail.com"},
]
dependencies = [
    "qtpy>=2.3.1",
]
requires-python = ">=3.7,<3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
stubs = [
    "PySide6>=6.5.1.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
